fixed spacing between cards

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,8 +15,19 @@
 #content {
     width: 50%;
     height: 50%;
-    border: 2px solid black;
     overflow: auto;
+    border: 2px solid black;
+}
+
+.card {
+    border: 1px solid black;
+    width: 18%;
+}
+
+#content, .card {
+    background-color: transparent;
+    border-radius: var(--bs-border-radius);
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px;
 }
 
 #search-bar {
@@ -24,7 +35,8 @@
     justify-content: center;
 }
 
-.card {
-    width: 50px;
-    height: 50px;
+@media (max-width: 768px) {
+    #content {
+        width: 75%;
+    }
 }
